Atualização de UML

--- a/pesquisa_mercado.docbook
+++ b/pesquisa_mercado.docbook
@@ -70,6 +70,9 @@
       <para/>
       <para/>
       <para/>
+      <para/>
+      <para/>
+      <para/>
     </section>
     <!--diagramend3-->
   </section>
